# CORTEX

./: .env.example  .gitignore  README.md  pyproject.toml  sources.json
cortex/: __init__.py  cli.py  models.py  registry.py  secrets.py
cortex/adapters/: __init__.py  base.py  figma.py  github.py  jira.py  notion.py
cortex/broca/: __init__.py  answers.py  banks.py  cli.py  intent.py  listen.py  narrator.py  respond.py  voice.py
cortex/hippocampus/: __init__.py  batch.py  cli.py  extract.py  ingest.py  query.py  record.py  store.py
